# mx-urtcdg-21

./: .gitignore  README.md  time.txt
.github/workflows/: panty.yml
WX/: README.MD
WX/tzt/: README.MD
WX/tzt/t1/: Cargo.toml
WX/udz/: README.MD  cari.sh
WX/udz/u1/: Cargo.toml  README.MD
WX/udz/u1/src/: README.MD  main.rs  ske.txt
old/: README.md  sc..txt  time.txt
old/.github/workflows/: pantismyl.yml
old/WX/: README.MD  cargoinit.sh  ghcli.sh  rizi.sh  uvinit.sh
old/WX/bui/: README.MD  binsiderHelp.txt  p1  p2  prepz.sh
old/WX/othz/: README.MD
old/WX/othz/gcli/: README.MD  gcli.sh
old/WX/othz/rev/: cargoinit.sh  pantismyl  revwork.sh
old/WX/othz/te1/: Cargo.toml  README.MD
old/WX/othz/te2py/: README.MD  comp.sh  q.txt  quag.sh
old/WX/othz/zama/: README.MD  bunz.sh
old/WX/w1/: README.MD
old/WX/w1/jstest/: README.MD  bunz.sh  sec3.js  test1.js
old/WX/w1/src/: main.rs
old/buildz/: README.MD  prepz.sh
old/buildz/w1/: Cargo.toml  README.MD
old/buildz/w1/src/: main.rs
old/mx--urtcdg-1/: .gitignore  README.md  merz.md  time.txt
old/mx--urtcdg-1/WO/: Makefile  README.MD
old/mx--urtcdg-1/WO/mw1/: Cargo.toml  README.MD  builz.sh
old/mx--urtcdg-1/WO/mw1/src/mytest/: README.MD  mstrt.rs
old/mx--urtcdg-1/WO/mw1/src/s1/: mod.rs
old/mx--urtcdg-1/WO/mw1/src/sec3/: README.MD  bank1.rs  mod.rs  w1.rs
old/mx--urtcdg-1/WO/mw1s1/: README.MD
old/mx--urtcdg-1/WO/t1/: Bacon.toml  Cargo.toml  Makefile  runz.sh
old/mx--urtcdg-1/mx/: cabal.sh  cast_enc_txt.sh  focmd.sh
rel/t1/: Cargo.toml
rel/t1/src/: main.rs
(+49 files in other folders)
